feat: 添加高德地图选区域，添加mapbox建筑楼层显示,渐变线显示

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learn Three</title>
+    <!-- <script src="https://webapi.amap.com/loader.js"></script> -->
+     <script src="https://webapi.amap.com/maps?v=2.1Beta&key=331ed9fe9b2bc08a21ef65c76ee71a4c"></script>
   </head>
   <body>
     <div id="app"></div>
